# web-llm

./: .gitignore  Cargo.toml  README.md  convert_safetensors.py
examples/: llama.rs
src/: context.rs  lib.rs
src/model/: llama.rs  loader.rs  matrix.rs  mod.rs
src/shaders/: add.wgsl  argmax.wgsl  compute.wgsl  elementwise.wgsl  matmul_vec_fp16.wgsl  matmul_vec_fp32.wgsl  multihead_attn.wgsl  multihead_attn_f32.wgsl  rms_norm_f16.wgsl  rms_norm_f32.wgsl  rope.wgsl  silu.wgsl  softmax.wgsl
src/tensor/: mod.rs  ops.rs  shape.rs
